[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[features]
default = ["slice"]
slice = ["dep:paste"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
flexbuffers = "2.0.0"
paste = { version = "1.0.14", optional = true}
rand = "0.8.5"
serde = { version = "1.0.195", features = ["derive"] }
